--- a/recipe.d/551/param.yaml
+++ b/recipe.d/551/param.yaml
@@ -10,11 +10,11 @@ cropper:
   nfrad: 5
 picker:
   azimuth:
-    max: 0.19
+    max: 180
     min: 0
   fitness:
     max: 1
-    min: 0.7
+    min: 0
   rmse:
     max: 5
     min: 0
@@ -33,8 +33,9 @@ rovi:
 searcher:
   cutter:
     base: -97
+    distance: 500
     offset: 180
-    width: 2.5
+    width: 5
   distance_threshold: 100
   feature_mesh: 4
   feature_radius: 18
