--- a/conf.d/config.yaml
+++ b/conf.d/config.yaml
@@ -36,7 +36,7 @@ config:
     target_frame_id: "camera/capture0/solve0"
     update_frame_id: "tool0_controller"
     check_frame_id: "solve_check"
-    post: ""
+#   post: "rosrun rovi_industrial revolve.py"
 
 config_tf:
   solve_check:
