1.conf.d/config.yaml:Added stereotype TF#

--- a/recipe.d/Sample/param.yaml
+++ b/recipe.d/Sample/param.yaml
@@ -3,40 +3,48 @@ cropper:
   cropR2: 0.08
   cropZ: 0
   ladC: 0
-  ladW: 30000
+  ladW: 40000
   ladW2: 30000
   mesh: 2
   nfmin: 20
   nfrad: 5
 picker:
   azimuth:
-    max: 180
+    max: 20
     min: 0
   fitness:
     max: 1
-    min: 0
+    min: 0.65
   rmse:
     max: 5
     min: 0
+  rotation:
+    max: 180
+    min: -180
+  transX:
+    max: 3000
+    min: -3000
+  transY:
+    max: 3000
+    min: -3000
 rovi:
-  live:
-    camera:
-      ExposureTime: 30000
   pshift_genpc:
-    paramsetN: 1
-    projector:
-      Intensity: 120
+    calc:
+      bw_diff: 8
+      darkness: 5
   ycam:
     ExposureTimeLevel: 4
+    camera:
+      Gain: 80
     projector:
       Intensity: 255
 searcher:
   cutter:
-    base: -97
+    base: 0
     distance: 500
-    offset: 180
-    width: 5
-  distance_threshold: 100
+    offset: 0
+    width: 0
+  distance_threshold: 10
   feature_mesh: 4
   feature_radius: 18
   icp_threshold: 3
@@ -44,3 +52,4 @@ searcher:
   normal_radius: 8
   repeat: 1
   rotate: 0
+
