--- a/conf.d/config.yaml
+++ b/conf.d/config.yaml
@@ -21,7 +21,7 @@ config:
   picker:
     multiplex: 1
     solve_frame_id: "camera/capture0"
-    reference_frame_id: "solve_check"
+    reference_frame_id: "base"
     base_frame_id: "base"
   report:
     "altitude": -25
@@ -35,33 +35,4 @@ config:
     source_frame_id: "camera/master0"
     target_frame_id: "camera/capture0/solve0"
     update_frame_id: "tool0_controller"
-    check_frame_id: "work_place"
-#    post: "rosrun rovi_industrial revolve.py"  #overrides built in post processor
 
-config_tf:
-  pallet:
-    parent_frame_id: "base"
-    transform:
-      rotation:
-        w: 1.0
-        x: 0.0
-        y: 0.0
-        z: 0.0
-      translation:
-        x: 0.0
-        y: -2000.0
-        z: 0.0
-  work_place:
-    parent_frame_id: "pallet"
-  solve_check:
-    parent_frame_id: "work_place"
-    transform:
-      rotation:
-        w: 0.0
-        x: 0.0
-        y: 1.0
-        z: 0.0
-      translation:
-        x: 0.0
-        y: 0.0
-        z: 500.0
