--- a/rc.d/melfa.yaml
+++ b/rc.d/melfa.yaml
@@ -11,4 +11,5 @@ config:
     update_frame_id: tool0_controller
     robot_ip: 192.168.221.239
     robot_port: [12000,12001]
-
+    reverse_frame_id: mount
+    reverse_direction: -1
