--- a/recipe.d/Sample/camera_master0.yaml
+++ b/recipe.d/Sample/camera_master0.yaml
@@ -1,3 +1,9 @@
-rotation: {w: -0.020284207313572906, x: 0.7031666184475001, y: -0.71037334454136,
-  z: 0.022692928420951552}
-translation: {x: 527.7958383881348, y: 46.44982100319634, z: 747.9991038657353}
+rotation:
+  w: 1.0
+  x: 0.0
+  y: 0.0
+  z: 0.0
+translation:
+  x: 0.0
+  y: 0.0
+  z: 0.0
