--- a/recipe.d/Sample/param.yaml
+++ b/recipe.d/Sample/param.yaml
@@ -8,6 +8,7 @@ cropper:
   mesh: 2
   nfmin: 20
   nfrad: 5
+  wd: 0
 picker:
   azimuth:
     max: 20
@@ -33,22 +34,17 @@ rovi:
       bw_diff: 8
       darkness: 5
   ycam:
-    ExposureTimeLevel: 4
+    ExposureTimeLevel: 2
     camera:
-      Gain: 80
+      Gain: 0
     projector:
-      Intensity: 255
-    hdr: 
-      enabled: false
+      Intensity: 200
+    hdr:
+      enabled: true
       pcgen_publish: false
       projector:
         Intensity: 0.2
 searcher:
-  cutter:
-    base: 0
-    distance: 500
-    offset: 0
-    width: 0
   distance_threshold: 10
   feature_mesh: 4
   feature_radius: 18
